--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: MovementSequenceMapping
 Type: Package
 Title: MovementSequenceMapping
 Version: 0.2-0
-Date: 2020-08-21
+Date: 2021-01-22
 Authors@R: c(person("Vincent T","van Hees",role=c("aut","cre"),
                     email="vincentvanhees@gmail.com"))
 Maintainer: Vincent T van Hees <vincentvanhees@gmail.com>
@@ -13,4 +13,5 @@ Suggests: testthat, SparseM, zoo, pawacc
 Depends: stats, utils, R (>= 3.5)
 NeedsCompilation: no
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.1.0
+RoxygenNote: 7.1.1
+Encoding: UTF-8
