add function documentation get_windows

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(add_symbols)
 export(detect_bouts)
 export(detect_nonwear)
 export(generate_sequence)
+export(get_windows)
 export(read_file)
 export(reformat_time_indicator)
 export(resample)
